<resources>
    <string name="app_name">TipCalculatorS22</string>
    <string name="bill_amount_string">Bill Amount</string>
    <string name="empty_price_string">$0.00</string>
    <string name="tip_percent_string">Tip Percent</string>
    <string name="empty_percent_string">0%</string>
    <string name="tip_amount_string">Tip Amount</string>
    <string name="number_of_people_string">Number of People</string>
    <string name="one_person_string">1 person</string>
    <string name="two_people_string">2 People</string>
    <string name="three_people_string">3 People</string>
    <string name="four_people_string">4 People</string>
    <string name="subtotal_string">Subtotal</string>
    <string name="total_string">Total</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- values for our list_preference -->
    <string name="no_rounding">no_rounding</string>
    <string name="round_tip">round_tip</string>
    <string name="round_total">round_total</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>