<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Bill Amount -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/bill_amount_string"/>
            <EditText
                android:id="@+id/bill_amount_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="numberDecimal"
                android:hint="@string/empty_price_string"
                android:importantForAutofill="no" />
        </LinearLayout>
        <!-- end Bill AMount Section -->

        <!-- Tip Percent -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/tip_percent_string"/>
            <Button
                android:id="@+id/dec_tip_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-"
                tools:ignore="HardcodedText" />
            <TextView
                android:id="@+id/tip_percent_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/empty_percent_string" />
            <Button
                android:id="@+id/inc_tip_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/tip_percent_sb"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:max="100" />

        <!-- Tip Amount -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/tip_amount_string" />

            <TextView
                android:id="@+id/tipAmountTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/empty_price_string" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/number_of_people_string" />
            <RadioGroup
                android:id="@+id/num_people_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:checkedButton="@id/two_people_rb">

                <RadioButton
                    android:id="@+id/one_person_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one_person_string" />
                <RadioButton
                    android:id="@+id/two_people_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two_people_string"/>
                <RadioButton
                    android:id="@+id/three_people_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/three_people_string"/>
                <RadioButton
                    android:id="@+id/four_people_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/four_people_string" />
            </RadioGroup>
        </LinearLayout>

        <Spinner
            android:id="@+id/num_people_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <!-- Subtotal -->
        <LinearLayout
            android:id="@+id/sub_total_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/subtotal_string" />
            <TextView
                android:id="@+id/subtotal_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/empty_price_string" />
        </LinearLayout>


        <!-- Total -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/total_string" />
            <TextView
                android:id="@+id/total_amount_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/empty_price_string" />
        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="200dp" />
    </LinearLayout>
</ScrollView>